--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/src/favicon.ico" type="image/x-icon" />
     <title>TriggerMap</title>
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://yourdomain.com/" />
+    <meta property="og:title" content="TriggerMap" />
+    <meta property="og:description" content="Your site description here" />
+    <meta property="og:image" content="/public/logo.png" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://yourdomain.com/" />
+    <meta name="twitter:title" content="TriggerMap" />
+    <meta name="twitter:description" content="Your site description here" />
+    <meta name="twitter:image" content="/public/logo.png" />
   </head>
   <body>
     <div id="app"></div>
